# alpha-sp-toy-model

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: integrate.h  python.h  templates.h
inc/gsl/: gsl_math.h  gsl_multimin.h
include/: integrate.h  python.h  templates.h  version.h
lib/: libgsl.la  libgslcblas.la
src/: alpha_sp.c  integrate.c  main.c  sigma_phot.c
src/node-share/: node_share.c
src/num-int/: integrate.c  num_int.c
src/python/: rdpar.c  recipes.c
